force-app/main/default/objects/RelatedSalesOrg__c/RelatedSalesOrg__c.object-meta.xml
<CustomObject>
    
    <label>Produto X Organização</label>
    <nameField>
        <displayFormat>OVR-{00000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos X Organizações</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>