force-app/main/default/objects/RelatedSalesOrg__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <fullName>ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>