force-app/main/default/objects/RelatedSalesOrg__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>RelatedSalesOrgs</relationshipName>
    <type>Lookup</type>
</CustomField>